🛠 :: (#955) 문자열 정규식 수정